# score

./: .gitignore  LICENSE  README.md
device_tree/: Cargo.toml
device_tree/src/: lib.rs
kernel/: Cargo.toml  Makefile  kernel.ld  kernel_generated.ld
kernel/.cargo/: config
kernel/src/: align.rs  allocator.rs  aspace.rs  config_generated.rs  cpu.rs  debug.rs  defines.rs  errors.rs  init.rs  main.rs  mp.rs  page.rs  panic.rs  percpu.rs  pmm.rs  sched.rs  stdio.rs  thread.rs  types.rs  vm.rs  vm_page_state.rs
kernel/src/arch/riscv64/: csr.rs  irq.rs  mmu.rs  mod.rs  sbi.rs  smp.rs  start.S  tlbflush.rs  topology.rs
kernel/src/klib/: bitmap.rs  cmpctmalloc.rs  list.rs  memory.rs  mod.rs  range.rs  rbtree.rs
kernel/src/locking/: mod.rs  mutex.rs  spinlock.rs
kernel/src/platform/riscv/: boot_reserve.rs  mod.rs  periphmap.rs  platform.rs
kernel/src/tests/: cmpct.rs  heap.rs  mod.rs  mutex.rs
kernel/src/vm/: kstack.rs  mod.rs  page_queues.rs  page_source.rs  vm.rs  vm_cow_pages.rs  vm_object_paged.rs  vm_page_list.rs  vmar.rs
rbtree/src/: lib.rs
scripts/: riscv64.json
