[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.4"
device_tree = { path = "../device_tree", default-features = false }

[features]
unittest = []

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true
